# juster-core

./: .gitignore  Makefile  README.MD  README.md  V2.MD  compile_and_test.sh  package.json  pylintrc  pyproject.toml  truffle-config.js
contracts/: BakingBet.ligo  CrystalBall.ligo  TestMultikey.ligo  types.ligo
docs/: juster-core-reference.md  pool-reference.md
metadata/: juster_metadata.json  pool_metadata.json
migrations/: 2_deploy_baking_bet.js  2_deploy_crystal_ball.js  2_deploy_juster.js
pytezos-jupyter-present/: contract_manager.py  keys_manager.py  pytezos-crystal-delphi.ipynb  pytezos-crystal-hackathon-presentation.ipynb  pytezos-crystal.ipynb  requirements.txt  settings.py  test-contracts.ipynb  test-using-interpret-new-contract.ipynb  test-using-interpret.ipynb
pytezos-tests/: TODO.md  delegate_and_rewards_test.py  determined_test.py  determited_test.py  edgecase_test.py  empty_and_equal_event_test.py  entrypoint_no_amount_tez_test.py  event_configuration_test.py  event_pause_test.py  force_majeure_test.py  four_participants_determined_test.py  liquidity_fee_test.py  manager_test.py  model.py  multiple_events_test.py  multiple_lp_test.py  precision_exploit_test.py  profit_split_test.py  reward_fee_split_test.py  set_delegate_test.py  slippage_test.py  state_transformation_base.py  three_participants_determined_test.py  very_big_numbers_test.py
scripts/: compile_and_test.sh  deploy.py  deploy_juster.py  deploy_pool.py  pool_name.py  pool_test_interactions.py
tests/: delegate_and_rewards_test.py  edgecase_test.py  empty_and_equal_event_test.py  (+30 more)
(+292 files in other folders)
