[tool.poetry]
name = "juster-core"
version = "0.1.0"
description = ""
authors = ["ztepler <ztepler@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pytezos = "^3.5.1"
requests = "^2.28.1"
types-requests = "^2.28.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
# exceptiongroup is required to run pytezos but it wasn't installed wtih pytezos
exceptiongroup = "^1.0.0-rc.6"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
force_single_line = true

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = true

